--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -504,3 +504,27 @@ body {
 .progress-wrap:hover .progress-icon {
   color: black !important; /* Force hover icon color to black */
 }
+
+/* curser */
+
+.cursor {
+  width: 4px;
+  height: 4px;
+  background-color: #001eff;
+  border-radius: 10px;
+  position: absolute;
+  z-index: 11;
+  transition-duration: 1.7s;
+  transition-timing-function:  cubic-bezier(0.07, 1.18, 1, 1);
+  z-index: 9999;
+}
+.cursor-follower {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  border: 2px solid #0015ff;
+  border-radius: 100px;
+  transition-duration: 0.7s;
+  transition-timing-function:  cubic-bezier(0.07, 1.18, 1, 1);
+  z-index: 9999;
+}
